@@ -206,10 +206,8 @@ sub send_message {
     Lacuna::Verify->new(content=>\$subject, throws=>[1005,'Message subject cannot be empty.',$subject])->not_empty;
     Lacuna::Verify->new(content=>\$subject, throws=>[1005,'Message subject cannot contain any of these characters: (){}<>&;@',$subject])->no_restricted_chars;
     Lacuna::Verify->new(content=>\$subject, throws=>[1005,'Message subject must be less than 100 characters.',$subject])->length_lt(100);
-    Lacuna::Verify->new(content=>\$subject, throws=>[1005,'Message subject cannot contain profanity.',$subject])->no_profanity;
     Lacuna::Verify->new(content=>\$body, throws=>[1005,'Message body cannot be empty.',$body])->not_empty;
     Lacuna::Verify->new(content=>\$body, throws=>[1005,'Message body cannot contain HTML tags or entities.',$body])->no_tags;
-    Lacuna::Verify->new(content=>\$body, throws=>[1005,'Message body cannot contain profanity.',$body])->no_profanity;
     my $empire = $self->get_empire_by_session($session_id);
     if ($options->{in_reply_to}) {
         my $reply_to = Lacuna->db->resultset('Lacuna::DB::Result::Message')->find($options->{in_reply_to});
