@@ -25,6 +25,7 @@
  - Fix: log real IPs in login log.
  - Fix: Speed up N19 news display.
  - Add: Added flip medal.
+ - Mod: Profanity filtering is more clear.
 
 3.0908:
  - Mod: trash_messages_where now defaults to not returning deleted message IDs.
